# object_annotation

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  CvvImage.cpp  CvvImage.h  DrawObjPic.cpp  DrawObjPic.h  ObjAnno.aps  ObjAnno.cpp  ObjAnno.h  ObjAnno.rc  ObjAnnoDlg.cpp  ObjAnnoDlg.h  ObjInfoDlg.cpp  ObjInfoDlg.h  resource.h  stdafx.cpp  stdafx.h
source/res/: ObjAnno.manifest  ObjAnno.rc2
